# steamsale_bot

./: .env.example  Cargo.toml  Dockerfile  README.md  docker-stack.yml
src/: config.rs  database.rs  framework.rs  main.rs  models.rs  steam.rs  util.rs
src/commands/: add_apps.rs  bind.rs  clear_apps.rs  help.rs  list_apps.rs  mod.rs  remove_apps.rs  search.rs  set_discount_threshold.rs  test.rs
src/events/: guild_available.rs  mod.rs  removed_from_guild.rs  serenity_ready.rs
src/repos/: apps_repo.rs  discord_repo.rs  junction_repo.rs  mod.rs
