[package]
name = "steamsale_bot"
version = "0.1.0"
edition = "2024"
description = "A Discord bot to track Steam sales and discounts"
repository = "https://github.com/jasonly027/steamsale_bot"

[dependencies]
anyhow = "1.0.99"
chrono = "0.4.41"
derivative = "2.2.0"
dotenvy = "0.15.7"
futures = "0.3.31"
mongodb = "3.2.5"
once_map = "0.4.22"
poise = "0.6.1"
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
strum = "0.27.2"
strum_macros = "0.27.2"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = {version = "0.3.19", features = ["env-filter"]}
url = "2.5.7"
urlencoding = "2.1.3"

[dev-dependencies]
pretty_assertions = "1.4.1"
rstest = "0.26.1"
serial_test = "3.2.0"
